# LLDB-mcp

./: .gitignore  README.md  TODO.md  pyproject.toml
src/lldb_mcp/: cli.py  config.py  errors.py  handlers.py  lldb_adapter.py  server.py  utils.py
tests/: __init__.py  conftest.py  test_adapter.py  test_config.py  test_errors.py  test_utils.py
tests/samples/: hello  hello.c  threads  threads.c
