[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lldb-mcp"
version = "0.1.0"
description = "LLDB-backed MCP server for Linux ELF analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.scripts]
lldb-mcp = "lldb_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
